--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div id="content-6" class="content content--switch">
 				<h2 class="content__title">HOME PAGE</h2>
 				<div class="content__subtitle">WELCOME TO FUTURE</div>
-<a href="index.html">			
+<a href="Homepage.html">			
 <button class="button">
     GO TO FUTURE
     <div class="button__horizontal"></div>
